# sodalite

./: .dockerignore  .flake8  .gitignore  CHANGELOG.md  CNAME  Dockerfile  Dockerfile.e2e  INSTALL  INSTALL.txt  Makefile  PKGBUILD  README.md  changelog.md  de.hnicke.Sodalite.desktop  install  mypy.ini  pyproject.toml  requirements.txt  setup.py  snapcraft.yaml  sodalite  sodalite.desktop  tags
.github/workflows/: aur.yaml  check.yaml  downstream.yaml  release.yaml
.run/: check.run.xml  lint.run.xml  pytest in heiko.run.xml  sodalite.run.xml  tests.run.xml  type-check.run.xml  update-access.run.xml
docs/: developer_guide.md  example.conf  example.rc  example.yml  index.md  sodalite-open.1  sodalite-open.1.md  sodalite.1  sodalite.1.md  sodalite.conf  usage.md
meta/: de.hnicke.Sodalite.appdata.xml  de.hnicke.Sodalite.desktop
scripts/: release  shell-integration.sh  sl  sodalite-docker  sodalite-open
sodalite/: __main__.py  actionpane.py  commandline.py  core.py  datamodel.py  dirservice.py  entry.py  environment.py  main.py  mylogger.py  navigationpane.py
src/: .gitignore  Makefile.am  Makefile.in  actionhook.py  actionpane.py  assignpane.py  commandline.py  config.py  core.py  datamodel.py  dirservice.py  entry.py  entrypane.py  key.py  main.py  mainform.py  mylogger.py  navigationpane.py  newmainform.py  newmainformactive.py  sodalite  theme.py
tests/: conftest.py  test_config.py  test_dirhistory.py  test_entrywatcher.py  test_history.py  test_navigator.py
tests_e2e/: test_e2e.py
util/: db-remove  install-config  shell-integration.sh  uninstall
(+85 files in other folders)
