[tool.poetry]
name = "sodalite"
version = "0.21.2"
description = "Keyboard-driven terminal file navigator and launcher"
authors = ["Heiko Nickerl <dev@hnicke.de>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/hnicke/sodalite"
repository = "https://github.com/hnicke/sodalite"
include = [
    "CHANGELOG.md", "copyright","sodalite.desktop",
    "scripts/shell-integration.*",
    "scripts/sodalite-open",
    "docs/sodalite.1.md", "docs/sodalite.1",
    "docs/sodalite-open.1.md", "docs/sodalite-open.1",
]

[tool.poetry.scripts]
sodalite = 'sodalite.__main__:main'

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
binaryornot = "^0.4.4"
click = "^8.0.1"
Pygments = "^2.9.0"
pyperclip = "^1.8.2"
PyYAML = "^5.4.1"
urwid = "^2.1.2"
watchdog = "^2.1.3"
blinker = "^1.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
mypy = "^0.910"
lxml = "^4.6.3"
flake8 = "^3.9.2"
flake8-sfs = "^0.0.3"
commitizen = "^2.17.13"

[tool.semantic_release]
version_variable = [
    "sodalite/util/version.py:VERSION",
    "pyproject.toml:version",
]
branch = "master"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"

